# primary_numbers

./: .~lock.dowód.odt#  CMakeLists.txt  dowód.odt
primary_symmetry/: main.cpp
untitled2/: main.cpp
